[package]
name = "nbssh"
version = "2.0.1"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/nbssh-rs"
license = "Apache-2.0"
description = "SSH command generator"
readme = "README.md"
keywords = ["ssh"]

[dependencies]
serde = { version = "1.0", default_features = false }
thiserror = "1.0"

[dev-dependencies]
serde_test = "1.0"
